[project]
name = "python-llm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Connor Adams"},
]
dependencies = [
    "structlog>=24.2.0",
    "boto3>=1.34.117",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
